# distributed-llama

./: .gitignore  .gitmodules  INSTALLATION_IMPLEMENTATION.md  MANIFEST.in  README.md  pyproject.toml  setup.py  test_installation.py
install/: README.md  common.sh  deploy_workers.sh  nodes.example  package_worker.sh  run_benchmark.sh  setup_root.sh  setup_wizard.py  test_connection.sh
mix/: COMPARISON_AND_ADVANTAGES.md  COMPLETION_SUMMARY.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PHASE3_4_SUMMARY.md  PLAN.md  QUICK_REFERENCE.md  README.md  SUMMARY_ZH.md  TODO_AND_IMPROVEMENTS.md
mix/src/airllm/: README.md  __init__.py  layer_engine.py  model_header.py  weight_offsets.py
mix/src/distributed-llama.python/: README.md  network.py  worker.py
tests/: test_setup_wizard.py
